hotfix: update swagger
